Fix vertical alignment when slots are present

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -7,10 +7,11 @@
 
 .sl-input {
   flex: 1 1 auto;
-  display: flex;
+  display: inline-flex;
   align-items: stretch;
   justify-content: center;
   position: relative;
+  width: 100%;
   font-family: var(--sl-input-font-family);
   font-weight: var(--sl-input-font-weight);
   line-height: var(--sl-line-height-normal);
@@ -86,7 +87,7 @@
 
 .sl-input__prefix,
 .sl-input__suffix {
-  display: flex;
+  display: inline-flex;
   flex: 0 0 auto;
   align-items: center;
   color: var(--sl-input-icon-color);
@@ -180,7 +181,7 @@
 
 .sl-input__clear,
 .sl-input__password-toggle {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   font-size: inherit;
   color: var(--sl-input-icon-color);
